--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.sagebionetworks</groupId>
 	<artifactId>database-semaphore</artifactId>
-	<version>4.0.6</version>
+	<version>4.0.7</version>
 	<packaging>jar</packaging>
 	<name>database-semaphore</name>
 	<description>Simple MySQL backed Semaphore</description>
@@ -110,7 +110,7 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.17.1</version>
+			<version>${log4j.version}</version>
 		</dependency>
 		<!-- MySQL dependencies -->
 		<dependency>
@@ -214,6 +214,7 @@
 	</build>
 
 	<properties>
+		<log4j.version>2.23.1</log4j.version>
 		<spring.version>5.3.27</spring.version>
 		<junit.jupiter.version>5.10.2</junit.jupiter.version>
 		<junit.platform.version>1.10.2</junit.platform.version>
